--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
     text-align: center;
 }
 #footer{
+    padding-top: 10px;
     margin-top: 64px;
     text-align: center;
     clear: both;
