--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     padding-right: 10px;
     border-top: 8px solid #001f3f;
     margin-left: 15px;
+    margin-right: 100px;
     margin-top: 15px;
   }
 #main{
